--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "xlw's blog",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline"
+    "start": "webpack-dev-server --inline --hot",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/dog2cat/xlwsblog#readme",
   "dependencies": {
+    "highlight.js": "^9.1.0",
     "marked": "^0.3.5",
     "vue": "^1.0.13",
     "vue-router": "^0.7.7"
@@ -31,6 +33,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
     "css-loader": "^0.23.1",
+    "style-loader": "^0.13.0",
     "vue-hot-reload-api": "^1.2.2",
     "vue-html-loader": "^1.1.0",
     "vue-loader": "^8.0.2",
